<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/txt_title"
        android:inputType="text"
        android:hint="@string/title"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/txt_venue"
        android:inputType="text"
        android:hint="@string/venue"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/txt_time"
        android:inputType="text"
        android:hint="@string/time"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/txt_desc"
        android:inputType="text"
        android:hint="@string/desc"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/btn_create"
        android:text="@string/create"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>

</LinearLayout>